<resources>
    <string name="app_name">ManageTenanants</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_apartment_number">Enter Apartment Number</string>
    <string name="total_payments_for_building">Total Payments For Building</string>
    <string name="add_payment_for_a_tenant">add payment for a tenant</string>
    <string name="payments_per_apartment">Payments per apartment</string>
    <string name="update">Update</string>
    <string name="payments_made">Payments made</string>
    <string name="hello_home_owners_association">Hello Home owners association</string>
    <string name="month">Month</string>
    <string name="payment">Payment</string>
    <string name="apartment_number">Apartment Number</string>
    <string name="send">Send</string>
    <string name="no_payments_made">No Payments Made</string>
</resources>