<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ManagementFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorAccent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:fontFamily="@font/amita_bold"
            android:gravity="center"
            android:text="@string/hello_home_owners_association"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/dropdown_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:textAlignment="center" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleBuildingIncome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/allPaymentsPerTenantView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/amita_bold"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/apartmentMonthsPaidView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:layout_weight="0.8"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/headline1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amita_bold"
                android:gravity="center"
                android:text="@string/payments_per_apartment"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/apartmentNumberToCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/enter_apartment_number"
                android:inputType="number"
                android:visibility="visible" />

            <Button
                android:id="@+id/Send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="getApartmentMonthsPaid"
                android:text="@string/send"
                android:visibility="visible" />

            <TextView
                android:id="@+id/reponse_rent_from_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/amita_bold"
                android:textColor="@color/white"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/payingView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:layout_weight="0.8"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/apartmentToAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/apartment_number"
                android:inputType="number"
                android:visibility="visible" />

            <EditText
                android:id="@+id/monthToAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/month"
                android:inputType="number"
                android:visibility="visible" />

            <EditText
                android:id="@+id/paymentToAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/payment"
                android:inputType="number"
                android:visibility="visible" />

            <Button
                android:id="@+id/updateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:layout_marginTop="25px"
                android:gravity="center|center_horizontal"
                android:onClick="paymentUpdate"
                android:text="@string/update"
                android:visibility="visible" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>